@@ -1,15 +1,14 @@
 package io.hawt.quarkus.deployment.test;
 
-import io.quarkus.bootstrap.model.AppArtifact;
-import io.quarkus.test.QuarkusUnitTest;
-import io.restassured.RestAssured;
-
 import java.io.IOException;
 import java.io.StringWriter;
 import java.io.Writer;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Properties;
 
+import io.quarkus.bootstrap.model.AppArtifact;
+import io.quarkus.test.QuarkusUnitTest;
+import io.restassured.RestAssured;
 import org.jboss.shrinkwrap.api.ShrinkWrap;
 import org.jboss.shrinkwrap.api.asset.Asset;
 import org.jboss.shrinkwrap.api.asset.EmptyAsset;
@@ -17,25 +16,26 @@ import org.jboss.shrinkwrap.api.asset.StringAsset;
 import org.jboss.shrinkwrap.api.spec.JavaArchive;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
+
 import static org.hamcrest.Matchers.containsString;
 
 public class HawtioQuarkusAuthenticationDisabledTest {
 
     @RegisterExtension
     static final QuarkusUnitTest CONFIG = new QuarkusUnitTest()
-        .setForcedDependencies(Arrays.asList(new AppArtifact("io.hawt", "hawtio-quarkus-deployment", "2.11-SNAPSHOT")))
+        .setForcedDependencies(List.of(new AppArtifact("io.hawt", "hawtio-quarkus-deployment", "3.0-SNAPSHOT")))
         .setArchiveProducer(() -> ShrinkWrap.create(JavaArchive.class)
             .addAsManifestResource(EmptyAsset.INSTANCE, "beans.xml")
             .addAsResource(applicationProperties(), "application.properties"));
 
     @Test
-    public void testHawtioAccessible() throws Exception {
+    public void testHawtioAccessible() {
         RestAssured.get("/hawtio")
             .then()
-            .body(containsString("<hawtio-app></hawtio-app>"));
+            .body(containsString("<title>Hawtio</title>"));
     }
 
-    public static final Asset applicationProperties() {
+    public static Asset applicationProperties() {
         Writer writer = new StringWriter();
 
         Properties props = new Properties();
